add name to head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Accessible Responsive Styling Practice</title>
+	<!-- Travon McCrary -->
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
